src/test/ui/nll/maybe-initialized-drop-with-uninitialized-fragments.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/maybe-initialized-drop-with-uninitialized-fragments.rs:22:5
   |
LL |     let wrap = Wrap { p: &mut x };
   |                          ------ borrow of `x` occurs here
...
LL |     x = 1;
   |     ^^^^^ assignment to borrowed `x` occurs here
LL |     // FIXME ^ This currently errors and it should not.
LL | }
   | - borrow might be used here, when `foo` is dropped and runs the destructor for type `Foo<'_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
